Refactor day_001 exercises for clarity and immutability; update function signatures and test cases

--- a/practice/day_001.ipynb
+++ b/practice/day_001.ipynb
@@ -4,30 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 001: Mastering the Python Dictionary\n",
+    "# Day 1: Mastering the Python Dictionary\n",
     "\n",
-    "Welcome to Day 1! Today's goal is to master the Python dictionary. This notebook is your interactive sandbox to solve the three exercises for today. \n",
-    "\n",
-    "**Instructions:**\n",
-    "1. Read the exercise description in a markdown cell.\n",
-    "2. Write your code in the following code cell to solve the problem.\n",
-    "3. Run the cell to test your solution.\n",
-    "4. Once you have a working solution, transfer the final, clean code into `practice/day_001.py`.\n",
-    "5. Run `pytest` from your terminal to formally verify your solution."
+    "Welcome to Day 1! Today, we're focusing on the Python Dictionary, one of the most powerful and versatile data structures in the language. We'll cover basic operations, practical applications, and solve a classic interview question."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- \n",
-    "### Exercise 1: User Profile Management\n",
+    "### Exercise 1: Dictionary Manipulation (Immutable)\n",
     "\n",
-    "**Task:** Write a function `create_and_modify_profile` that takes a dictionary representing a user profile. The function should perform the following modifications:\n",
-    "1. Add a new key `\"country\"` with the value `\"USA\"`.\n",
-    "2. Update the value of the `\"city\"` key to `\"New York\"`.\n",
-    "3. Remove the `\"email\"` key.\n",
-    "4. The function should return the modified dictionary."
+    "**Task:** Your goal is to write a function that takes a user profile dictionary and modifies it based on a given action. Crucially, your function must be **immutable**—it should always return a *new, modified copy* of the dictionary, leaving the original unchanged. This is a critical best practice in professional software development.\n",
+    "\n",
+    "**Actions:**\n",
+    "- `add`: Add a new key-value pair.\n",
+    "- `update`: Change the value of an existing key.\n",
+    "- `delete`: Remove a key from the profile."
    ]
   },
   {
@@ -36,31 +29,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, Any\n",
+    "def create_and_modify_profile(profile, action, key, value=None):\n",
+    "    \"\"\"\n",
+    "    Exercise 1: Modify a user profile dictionary.\n",
+    "    - 'add': Add a new key-value pair.\n",
+    "    - 'update': Update an existing key.\n",
+    "    - 'delete': Remove a key.\n",
     "\n",
-    "def create_and_modify_profile(profile: Dict[str, Any]) -> Dict[str, Any]:\n",
-    "    # Your implementation goes here\n",
+    "    IMPORTANT: This function should be 'immutable'. It must return a new,\n",
+    "    modified copy of the dictionary and leave the original unchanged.\n",
+    "    \"\"\"\n",
+    "    # Your code here\n",
     "    pass\n",
     "\n",
-    "# Example usage (you can modify this to test):\n",
-    "initial_profile = {\"name\": \"Ben\", \"city\": \"Austin\", \"email\": \"ben@example.com\"}\n",
-    "modified_profile = create_and_modify_profile(initial_profile.copy()) # Pass a copy to avoid modifying the original during testing\n",
-    "print(f\"Initial: {initial_profile}\")\n",
-    "print(f\"Modified: {modified_profile}\")"
+    "# Example usage (you can test your implementation here)\n",
+    "initial_profile = {'name': 'Ben', 'email': 'ben@example.com'}\n",
+    "\n",
+    "# Test adding\n",
+    "profile_with_country = create_and_modify_profile(initial_profile, 'add', 'country', 'Thailand')\n",
+    "print(f\"After adding: {profile_with_country}\")\n",
+    "print(f\"Original unchanged: {initial_profile}\") \n",
+    "\n",
+    "# Test updating\n",
+    "profile_updated_name = create_and_modify_profile(initial_profile, 'update', 'name', 'Benjamin')\n",
+    "print(f\"After updating: {profile_updated_name}\")\n",
+    "print(f\"Original unchanged: {initial_profile}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- \n",
     "### Exercise 2: Word Frequency Counter\n",
     "\n",
-    "**Task:** Write a function `count_word_frequency` that takes a string `sentence`. The function should return a dictionary where each key is a word from the sentence and the value is the number of times that word appeared. \n",
-    "\n",
-    "**Requirements:**\n",
-    "- The counting should be case-insensitive (e.g., \"The\" and \"the\" are the same word).\n",
-    "- The function should ignore punctuation (e.g., \"test.\" and \"test\" should be counted as the same word)."
+    "**Task:** Write a function that takes a sentence (a string) and returns a dictionary where the keys are the words and the values are their frequencies. The counting must be case-insensitive."
    ]
   },
   {
@@ -69,34 +71,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict\n",
-    "import re # A useful library for this task\n",
-    "\n",
-    "def count_word_frequency(sentence: str) -> Dict[str, int]:\n",
-    "    # Your implementation goes here\n",
-    "    pass\n",
-    "\n",
-    "# Example usage:\n",
-    "sentence = \"This is a test. This test is only a test.\"\n",
-    "frequency = count_word_frequency(sentence)\n",
-    "print(f\"Sentence: '{sentence}'\")\n",
-    "print(f\"Word Frequency: {frequency}\")"
+    "def count_word_frequency(sentence):\n",
+    "    \"\"\"\n",
+    "    Exercise 2: Count the frequency of words in a sentence.\n",
+    "    The counting should be case-insensitive.\n",
+    "    \"\"\"\n",
+    "    # Your code here\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "### Exercise 3: Two Sum\n",
+    "### Exercise 3: The 'Two Sum' Problem\n",
     "\n",
-    "**Task:** Write a function `two_sum` that takes a list of integers `nums` and an integer `target`. The function should find two numbers in the list that add up to the target. \n",
-    "\n",
-    "**Requirements:**\n",
-    "- The function should return a list containing the **indices** of the two numbers.\n",
-    "- If no such pair is found, the function should return `None`.\n",
-    "- You may assume that each input would have exactly one solution (for the cases where a solution exists).\n",
-    "- You may not use the same element twice."
+    "**Task:** This is a classic interview question. Given a list of integers `nums` and an integer `target`, return the *indices* of the two numbers in the list that add up to the target. You can assume that each input has exactly one solution."
    ]
   },
   {
@@ -105,18 +95,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Optional\n",
-    "\n",
-    "def two_sum(nums: List[int], target: int) -> Optional[List[int]]:\n",
-    "    # Your implementation goes here\n",
-    "    pass\n",
-    "\n",
-    "# Example usage:\n",
-    "nums = [2, 7, 11, 15]\n",
-    "target = 9\n",
-    "indices = two_sum(nums, target)\n",
-    "print(f\"Nums: {nums}, Target: {target}\")\n",
-    "print(f\"Indices: {indices}\") # Expected output: [0, 1] or [1, 0]"
+    "def two_sum(nums, target):\n",
+    "    \"\"\"\n",
+    "    Exercise 3: Find two numbers in a list that add up to a target.\n",
+    "    Return the indices of the two numbers.\n",
+    "    \"\"\"\n",
+    "    # Your code here\n",
+    "    pass"
    ]
   }
  ],
@@ -136,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
