Update day1 solutions

--- a/practice/day_001.ipynb
+++ b/practice/day_001.ipynb
@@ -6,21 +6,14 @@
    "source": [
     "# Day 1: Mastering the Python Dictionary\n",
     "\n",
-    "Welcome to Day 1! Today, we're focusing on the Python Dictionary, one of the most powerful and versatile data structures in the language. We'll cover basic operations, practical applications, and solve a classic interview question."
+    "Welcome to your practice notebook! Use this space to experiment and solve the exercises for Day 1. The `README.md` file contains the full lesson and problem descriptions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1: Dictionary Manipulation (Immutable)\n",
-    "\n",
-    "**Task:** Your goal is to write a function that takes a user profile dictionary and modifies it based on a given action. Crucially, your function must be **immutable**—it should always return a *new, modified copy* of the dictionary, leaving the original unchanged. This is a critical best practice in professional software development.\n",
-    "\n",
-    "**Actions:**\n",
-    "- `add`: Add a new key-value pair.\n",
-    "- `update`: Change the value of an existing key.\n",
-    "- `delete`: Remove a key from the profile."
+    "### Exercise 1: Dictionary Manipulation"
    ]
   },
   {
@@ -29,40 +22,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_and_modify_profile(profile, action, key, value=None):\n",
-    "    \"\"\"\n",
-    "    Exercise 1: Modify a user profile dictionary.\n",
-    "    - 'add': Add a new key-value pair.\n",
-    "    - 'update': Update an existing key.\n",
-    "    - 'delete': Remove a key.\n",
+    "from typing import Any, Dict, List, Optional\n",
     "\n",
-    "    IMPORTANT: This function should be 'immutable'. It must return a new,\n",
-    "    modified copy of the dictionary and leave the original unchanged.\n",
+    "def create_and_modify_profile(\n",
+    "    profile: Dict[str, Any], action: str, key: str, value: Optional[Any] = None\n",
+    ") -> Dict[str, Any]:\n",
+    "    \"\"\"\n",
+    "    Takes a user profile dictionary and performs an action.\n",
+    "    - \"add\": Adds a new key-value pair.\n",
+    "    - \"update\": Updates an existing key.\n",
+    "    - \"delete\": Removes a key.\n",
+    "    Returns a new, modified copy, leaving the original unchanged.\n",
     "    \"\"\"\n",
     "    # Your code here\n",
     "    pass\n",
     "\n",
-    "# Example usage (you can test your implementation here)\n",
-    "initial_profile = {'name': 'Ben', 'email': 'ben@example.com'}\n",
-    "\n",
-    "# Test adding\n",
-    "profile_with_country = create_and_modify_profile(initial_profile, 'add', 'country', 'Thailand')\n",
-    "print(f\"After adding: {profile_with_country}\")\n",
-    "print(f\"Original unchanged: {initial_profile}\") \n",
-    "\n",
-    "# Test updating\n",
-    "profile_updated_name = create_and_modify_profile(initial_profile, 'update', 'name', 'Benjamin')\n",
-    "print(f\"After updating: {profile_updated_name}\")\n",
-    "print(f\"Original unchanged: {initial_profile}\")"
+    "# Example Usage (feel free to add more tests!)\n",
+    "user_profile = {\"name\": \"Ben\", \"email\": \"ben@example.com\"}\n",
+    "new_profile = create_and_modify_profile(user_profile, \"add\", \"country\", \"Thailand\")\n",
+    "print(f\"Original: {user_profile}\")\n",
+    "print(f\"New: {new_profile}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2: Word Frequency Counter\n",
-    "\n",
-    "**Task:** Write a function that takes a sentence (a string) and returns a dictionary where the keys are the words and the values are their frequencies. The counting must be case-insensitive."
+    "### Exercise 2: Word Frequency Counter"
    ]
   },
   {
@@ -71,22 +57,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_word_frequency(sentence):\n",
+    "from typing import Any, Dict, List, Optional\n",
+    "\n",
+    "def count_word_frequency(sentence: str) -> Dict[str, int]:\n",
     "    \"\"\"\n",
-    "    Exercise 2: Count the frequency of words in a sentence.\n",
-    "    The counting should be case-insensitive.\n",
+    "    Counts the frequency of words in a sentence.\n",
+    "    The function should be case-insensitive and ignore all punctuation.\n",
     "    \"\"\"\n",
     "    # Your code here\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "# Example Usage\n",
+    "text = \"The quick brown fox jumps over the lazy dog Dog.\"\n",
+    "frequency = count_word_frequency(text)\n",
+    "print(frequency)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3: The 'Two Sum' Problem\n",
-    "\n",
-    "**Task:** This is a classic interview question. Given a list of integers `nums` and an integer `target`, return the *indices* of the two numbers in the list that add up to the target. You can assume that each input has exactly one solution."
+    "### Exercise 3: The \"Two Sum\" Problem"
    ]
   },
   {
@@ -95,13 +86,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def two_sum(nums, target):\n",
+    "from typing import Any, Dict, List, Optional\n",
+    "\n",
+    "def two_sum(nums: List[int], target: int) -> Optional[List[int]]:\n",
     "    \"\"\"\n",
-    "    Exercise 3: Find two numbers in a list that add up to a target.\n",
-    "    Return the indices of the two numbers.\n",
+    "    Finds two numbers in a list that add up to a specific target.\n",
+    "    Returns a list containing the indices of the two numbers.\n",
+    "    If no two numbers add up to the target, returns None.\n",
     "    \"\"\"\n",
     "    # Your code here\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "# Example Usage\n",
+    "result = two_sum([2, 7, 11, 15], 9)\n",
+    "print(result)\n",
+    "\n",
+    "no_solution = two_sum([1, 2, 3], 7)\n",
+    "print(no_solution)"
    ]
   }
  ],
@@ -121,9 +122,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
