Refactor Day 2 content to focus solely on Python lists.

--- a/docs/day_002.md
+++ b/docs/day_002.md
@@ -1,90 +1,74 @@
-# Day 002: Mastering Python Lists and Sets
+# Day 002: Mastering Python Lists
 
-Welcome to Day 2. Today's focus is on two fundamental sequence types: the `list` (dynamic array) and the `set` (hash table). For an intermediate developer, the key is not just knowing their syntax, but understanding their distinct performance characteristics and making deliberate, efficient choices between them.
+Welcome to Day 2. Lists are arguably the most fundamental data structure in Python. For an intermediate developer, mastering lists means moving beyond basic `append` and `pop` operations. It involves a deep understanding of slicing, list comprehensions, and the critical distinction between methods that return a new list versus those that modify a list in-place.
 
-### Core Concept: The Dynamic Array vs. The Hash Table
+### Core Concept: Slicing and List Comprehensions
 
-list (The Dynamic Array):
+**Slicing:** This is the most Pythonic way to access sub-sections of a list. The syntax `my_list[start:stop:step]` is incredibly powerful for creating copies or extracting elements. A key feature is that slicing always returns a  **new list** , leaving the original untouched. This is a form of immutability that helps prevent bugs.
 
-A Python list is an abstraction over a dynamic array. It stores elements in a contiguous block of memory, which provides fast, O(1) access by index (my_list[i]).
+**List Comprehensions:** These provide a concise, readable, and often more performant way to create a new list by applying an expression to each item in an existing iterable. They are a hallmark of idiomatic Python code.
 
-* **Strengths:** Ordered, mutable, allows duplicates, fast index-based access. `append()` is an amortized O(1) operation.
-* **Weaknesses:** Checking for an element's existence (`x in my_list`) requires a linear scan, making it an **O(n)** operation. Insertions or deletions in the middle of the list are also slow (O(n)) as subsequent elements must be shifted.
+```py
+# Create a new list of squared numbers
+squares = [x**2 for x in range(10) if x % 2 == 0]
+# Output: [0, 4, 16, 36, 64]
 
-set (The Hash Table):
-
-A Python set is an unordered collection of unique elements, implemented as a hash table (similar to a dictionary's keys).
-
-* **Strengths:** Extremely fast membership testing (`x in my_set`) with an average time complexity of  **O(1)** . Enforces uniqueness.
-* **Weaknesses:** Unordered, does not allow duplicate elements.
-
-> **The Decision:** The choice between a `list` and a `set` is a primary test of an engineer's understanding of data structures. Use a `list` when order matters. Use a `set` when your primary need is to check for the existence of items or to maintain a collection of unique elements.
+```
 
 ### Today's Exercises
 
-#### Exercise 1: Fundamentals - List Manipulation
+#### Exercise 1: Fundamentals - Slicing Practice
 
-Task: Implement a function that processes a queue of tasks stored in a list. It should remove the first task, process it, and add a new task to the end.
+**Concept:** This exercise focuses on mastering the extended slice syntax (`[start:stop:step]`) to create new, transformed lists in a single, expressive line of code.
 
-Goal: Reinforce the core list operations of indexed removal (pop(0)) and appending (append()), and to recognize their performance implications in a queue-like structure.
+Problem Statement:
 
-#### Exercise 2: Practical Application - Finding Unique Items
+Write a function reverse_and_slice that takes a list and returns a new list containing every other element from the original list, but in reverse order.
 
-Task: Implement a function that takes a list of email addresses and returns a count of the unique domains.
+**Example:**
 
-Goal: Demonstrate a practical, real-world use case for a set—efficiently identifying and counting unique items from a larger collection.
+* Input: `[10, 20, 30, 40, 50, 60]`
+* Output: `[60, 40, 20]`
 
-#### Exercise 3: Interview Challenge - Contains Duplicate
+#### Exercise 2: Practical Application - Product Filtering
 
-Task: Implement the classic "Contains Duplicate" function. Given a list of integers, determine if any value appears at least twice.
+**Concept:** This exercise uses a list comprehension to filter and transform data, a very common task in data processing and back-end development.
 
-Goal: Solve a performance challenge where the naive O(n²) list-based solution is too slow, and the optimal O(n) solution requires leveraging the O(1) lookup property of a set.
+Problem Statement:
 
-### Beyond the Basics: Pythonic Sequences
+Write a function filter_products that takes a list of product dictionaries. It should return a new list containing only the names of products that are both in stock ("in_stock": True) and cost more than a specified minimum price.
 
-* **List Comprehensions:** The most Pythonic way to create lists based on existing iterables.
-  ```
-  evens = [x for x in range(10) if x % 2 == 0]
-  # Output: [0, 2, 4, 6, 8]
+**Key Requirements:**
 
-  ```
-* **Set Operations:** Sets support powerful mathematical operations like union (`|`), intersection (`&`), and difference (`-`), which are highly optimized.
-  ```
-  a = {1, 2, 3}
-  b = {3, 4, 5}
-  print(a - b) # Output: {1, 2}
+* You must use a **list comprehension** for this solution.
 
-  ```
-* **`collections.deque`:** For true queue operations, `deque` is superior to a `list`. It's a "double-ended queue" designed for fast O(1) appends and pops from both ends.
+#### Exercise 3: Interview Challenge - Rotate List In-Place
+
+**Concept:** This is a classic interview question that tests your understanding of slice *assignment* and in-place modification, which is a more advanced technique than simple slicing.
+
+Problem Statement:
+
+Write a function rotate_list that rotates a list nums to the right by k steps. This modification must be done in-place, meaning you modify the original list directly. The function should not return anything.
+
+**Key Requirements:**
+
+* The function must modify the list in-place.
+* Handle cases where `k` is greater than the length of the list.
 
 ### Tricky Interview Questions & Answers
 
-**1. "How would you remove duplicates from a list while preserving the original order?"**
+**1. "You used slice assignment (`nums[:] = ...`) to modify the list in-place. What is the difference between that and a simple assignment (`nums = ...`) inside a function?"**
 
-* **The Answer:** A `set` is unordered, so `list(set(my_list))` will remove duplicates but scramble the order. The professional, Pythonic solution is to use the fact that dictionaries (since Python 3.7) preserve insertion order.
-  ```
-  ordered_unique = list(dict.fromkeys(my_list))
+* **Answer:** "This is a critical distinction related to how Python handles object references. When you do a simple assignment like `nums = ...`, you are changing the local variable `nums` to point to a completely new list object in memory. The original list outside the function remains unchanged. When you use slice assignment like `nums[:] = ...`, you are not changing the reference; you are modifying the *contents* of the original object that `nums` points to. This is the correct way to achieve an in-place modification that is visible outside the function's scope."
 
-  ```
+**2. "What is the difference between a shallow copy and a deep copy of a list, especially if it contains other lists?"**
 
-  This is a concise and efficient one-liner. A more manual approach involves iterating through the list and adding elements to a helper `set` to track what you've seen.
+* **Answer:** "A shallow copy (created with `my_list.copy()` or `my_list[:]`) creates a new list object, but it only copies the *references* to the objects inside the original list. If the list contains simple elements like numbers or strings, it behaves like a full copy. However, if the list contains mutable objects like other lists, both the original and the shallow copy will contain references to the  *exact same inner lists* . Modifying an inner list in one will affect the other. A deep copy (using the `copy.deepcopy()` function) solves this by recursively creating new copies of everything, including all nested objects, ensuring the two lists are completely independent."
 
-**2. "What is the difference between `list.sort()` and the `sorted()` built-in function?"**
+**3. "Is a list comprehension always better than a `for` loop?"**
 
-* **The Answer:**
-  * `list.sort()`: This is a method that modifies the list  **in-place** . It returns `None`. You use it when you don't need to keep the original, unsorted list.
-  * `sorted(list)`: This is a built-in function that returns a  **new, sorted list** , leaving the original list unchanged.
-  * Knowing when to modify in-place versus creating a new copy is a key sign of a careful and deliberate programmer.
+* **Answer:** "Not always, but often. For creating a new list based on an existing iterable, a list comprehension is generally preferred because it's more concise, readable, and can be faster due to optimizations in the Python interpreter. However, a traditional `for` loop is the better choice when the logic is too complex to fit cleanly into a comprehension, if you need to perform actions on more than one list, or if you don't need to create a new list at all (e.g., you're just printing items or modifying them in-place)."
 
-**3. "Why is checking for membership in a `set` so much faster than in a `list`?"**
+**4. "What does the `key` argument in the `list.sort()` method do? Provide a practical example."**
 
-* **The Answer:** This question directly tests your knowledge of the underlying data structures. `x in my_list` performs a linear search, checking each element one by one until it finds a match or reaches the end (O(n)). `x in my_set` computes the hash of `x` and directly checks the corresponding memory location for its existence (O(1)). For large collections, the difference is massive.
-
-**4. "You have two lists. How would you efficiently find all elements that are in the first list but not in the second?"**
-
-* **The Answer:** The naive approach is a nested loop (O(n*m)), which is highly inefficient. The professional solution is to convert the lists to sets and use the set difference operation, which is highly optimized.
-  ```
-  diff = set(list_a) - set(list_b)
-
-  ```
-  This demonstrates that you can leverage the right data structure to turn a complex problem into a simple, readable, and performant line of code.
+* **Answer:** "The `key` argument allows you to provide a function that is called on every element of the list before making comparisons. The return value of this function is then used as the basis for sorting. It's incredibly powerful for custom sorting logic without having to write a complex comparison function. A practical example would be sorting a list of dictionaries by a specific key, like sorting a list of users by their age: `users.sort(key=lambda user: user['age'])`. This sorts the list in-place based on the 'age' value in each user dictionary."
