--- a/docs/day_003.md
+++ b/docs/day_003.md
@@ -1,80 +1,59 @@
-# Day 003: Advanced String Manipulation in Python
+# Day 3: Mastering Python Sets
 
-Welcome to Day 3. Strings are one of the most common data types you will handle as a back-end engineer. An intermediate developer must understand the core principles of string immutability, the nuances of formatting, and the most efficient manipulation techniques.
+Welcome to Day 3. Today's focus is on the Python `set`, a data structure that is often underutilized but is incredibly powerful for specific tasks. Like a dictionary, a `set` is implemented using a hash table, giving it the same remarkable **O(1)** average time complexity for additions, deletions, and membership testing (`in`).
 
-### Core Concept: Immutability and its Consequences
+The defining characteristic of a set is that it only stores  **unique, hashable elements** . This makes it the perfect tool for deduplication, membership testing, and performing mathematical set operations like union, intersection, and difference.
 
-The single most important concept to understand about Python strings is that they are  **immutable** . This means that once a string is created, it cannot be changed. Every method that appears to "modify" a string—like `.upper()`, `.replace()`, or `.strip()`—actually returns a  **new string** , leaving the original untouched.
+### Exercise 1: Finding Unique Elements
 
-This has profound performance implications:
+**Concept:** This exercise leverages the most fundamental property of a set: its ability to automatically enforce uniqueness.
 
-* **Inefficient Concatenation:** Building a string in a loop using `+=` is a classic performance trap.
-  ```
-  # Inefficient: O(n^2)
-  s = ""
-  for item in my_list:
-      s += item # Creates a new string in every iteration
+Problem Statement:
 
-  ```
+Write a function find_unique_elements that takes a list of items (which may contain duplicates) and returns a new list containing only the unique elements from the original list.
 
-  Each concatenation creates a new string and copies the contents of the old and new parts. For a list of `n` strings, this results in O(n²) complexity.
-* **Efficient Concatenation:** The correct, professional way to join a sequence of strings is with the `str.join()` method, which is an O(n) operation.
-  ```
-  # Efficient: O(n)
-  s = "".join(my_list)
+**Key Requirements:**
 
-  ```
+* The function must preserve the **original order** of the elements as they first appeared in the input list. For example, `[1, 2, 1, 3]` should result in `[1, 2, 3]`.
 
-### Today's Exercises
+### Exercise 2: Comparing Sets of Skills
 
-#### Exercise 1: Fundamentals - Log Entry Formatter
+**Concept:** This exercise showcases the power of mathematical set operations (`&` for intersection, `-` for difference) to compare collections of data efficiently and readably.
 
-Task: Implement a function that takes a dictionary of log data (e.g., {'timestamp': '...', 'level': '...', 'message': '...'}) and formats it into a standardized string format.
+Problem Statement:
 
-Goal: Practice modern string formatting using f-strings and handle different data types within a string context.
+Write a function get_common_and_different_skills that takes two lists of skills (e.g., for two job candidates). The function should return a tuple containing two sets: the first set should contain skills common to both candidates, and the second should contain skills that are unique to the first candidate.
 
-#### Exercise 2: Practical Application - Palindrome Checker
+**Key Requirements:**
 
-Task: Implement a function that checks if a string is a palindrome. The function must be case-insensitive and ignore all non-alphanumeric characters.
+* The function must return a tuple of two sets: `(common_skills, unique_to_first)`.
 
-Goal: Practice string cleaning, normalization (case folding), and comparison techniques, like using two pointers or comparing a string with its reverse.
+### Exercise 3: Detecting Duplicates
 
-#### Exercise 3: Interview Challenge - Valid Anagram
+**Concept:** This is a classic interview problem that can be solved in several ways, but using a set provides the most elegant and often the most performant solution due to its O(1) membership testing.
 
-Task: Implement a function that determines if two strings are anagrams of each other (i.e., they contain the same characters with the same frequencies).
+Problem Statement:
 
-Goal: Solve a classic interview problem that can be approached in multiple ways. This tests your ability to compare different solutions, such as sorting the strings (simple but less efficient) versus using a frequency counter with a dictionary (more optimal).
+Write a function has_duplicate_characters that takes a string and returns True if the string contains any duplicate characters, and False otherwise.
 
-### Beyond the Basics: Pythonic Strings
+**Key Requirements:**
 
-* **f-strings (Formatted String Literals):** Introduced in Python 3.6, f-strings are the modern standard for string formatting. They are more readable, more concise, and faster than older methods like `%`-formatting or `str.format()`.
-  ```
-  name = "Ben"
-  age = 30
-  print(f"User {name} is {age} years old.")
-
-  ```
-* **`str.join()`:** As mentioned, this is the single most important method for efficient string building from an iterable. Master it.
-* **`str.strip()`, `str.lstrip()`, `str.rstrip()`:** Essential for cleaning whitespace or other specified characters from the ends of a string.
-* **`re` (Regular Expressions):** For complex pattern matching, searching, and substitution, Python's built-in `re` module is the industry-standard tool.
+* The comparison should be  **case-sensitive** . For example, "a" and "A" are considered different characters.
 
 ### Tricky Interview Questions & Answers
 
-**1. "Why is building a string with a `for` loop and `+` a bad idea? What should you use instead?"**
+**1. "You used a set to find unique items. Could you also use dictionary keys? What's the difference?"**
 
-* **The Answer:** This is a direct test of your understanding of immutability. Explain that `s += part` is O(n²) because it reallocates memory and copies the entire string in every iteration. The correct solution is to append all parts to a `list` and then call `"".join(list_of_parts)` at the end, which is an efficient O(n) operation as it calculates the final size once and performs a single allocation.
+* **Answer:** "Yes, you could absolutely use dictionary keys. In fact, before Python 2.7, the common way to create a set from a list was `dict.fromkeys(my_list).keys()`. Both sets and dictionary keys are implemented using hash tables and provide O(1) average time complexity for lookups. The main difference is semantic and memory-based. A `set` is more direct and communicates the intent of storing a collection of unique items more clearly. It's also more memory-efficient because it only stores the elements, whereas a dictionary has the overhead of storing both keys and values (even if the values are `None`). For simply tracking uniqueness, a `set` is the superior choice."
 
-**2. "What is the most Pythonic way to reverse a string?"**
+**2. "What is a `frozenset` and when would you use it?"**
 
-* **The Answer:** The most common and Pythonic way is to use extended slicing: `reversed_string = my_string[::-1]`. It's concise, highly readable to any Python developer, and very efficient. While you could use a loop or `"".join(reversed(my_string))`, the slicing method is generally preferred.
+* **Answer:** "A `frozenset` is an immutable version of a `set`. Once it's created, you cannot add or remove elements from it. This immutability is important because it means a `frozenset` is  **hashable** . You would use a `frozenset` in situations where you need a set-like object to be an element in another set or to be a key in a dictionary. For example, you could have a dictionary where the keys are `frozenset`s representing pairs of items."
 
-**3. "What is the difference between `str.find()` and `str.index()`?"**
+**3. "Your solution for finding unique, ordered elements is O(n). Is there a faster way?"**
 
-* **The Answer:** Both methods search for a substring and return the starting index of the first occurrence. The key difference is their behavior on failure:
-  * `str.find()`: Returns `-1` if the substring is not found.
-  * `str.index()`: Raises a `ValueError` if the substring is not found.
-  * The choice depends on your error-handling philosophy. Use `.find()` if you expect failures and will handle the `-1` case (Look Before You Leap). Use `.index()` inside a `try...except` block if you expect the substring to exist and its absence is an exceptional event (Easier to Ask for Forgiveness than Permission).
+* **Answer:** "In terms of time complexity, O(n) is the optimal solution because you must, at a minimum, look at every element in the input list at least once. There's no way to know what the unique elements are without examining the entire list. My solution iterates through the list once and performs an O(1) set lookup at each step, making the total time complexity O(n). While other O(n) solutions exist, you can't get faster than linear time for this problem."
 
-**4. "Can you explain Unicode and why it's important in modern Python?"**
+**4. "How do set operations like intersection (`&`) and difference (`-`) work under the hood, and why are they so fast?"**
 
-* **The Answer:** In modern Python (3+), all strings are sequences of Unicode characters by default. This is a huge advantage as it allows the language to natively handle any character from any language in the world (e.g., English, Thai, Japanese, emojis). The counterpart is a `bytes` object, which is a sequence of raw 8-bit bytes. The process of converting between them is `encoding` (string to bytes) and `decoding` (bytes to string). A back-end engineer must understand this distinction to correctly handle data from files, network sockets, and APIs.
+* **Answer:** "They are fast because they operate directly on the underlying hash tables. For an intersection, Python can iterate through the elements of the smaller set and perform an O(1) lookup for each element in the larger set. This makes the operation's time complexity proportional to the size of the smaller set, which is very efficient. Similarly, for a difference, it iterates through the first set and performs O(1) lookups in the second set to see if the element should be kept. This avoids the O(n*m) complexity you'd get if you were comparing two lists with nested loops."
